--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container">
     <article class="imagecontainer">
-      <img src="/images/image-equilibrium.jpg" alt="#">
+      <img src="/image-equilibrium.jpg" alt="#">
       <div>
-        <img src="/images/icon-view.svg" alt="#">
+        <img src="/icon-view.svg" alt="#">
       </div>
     </article>
 
