--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <title>Frontend Mentor | NFT preview card component</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -21,13 +21,13 @@
       <p>Our Equilibrium collection promotes balance and calm.
       </p>
       <ul>
-        <li><img src="/images/icon-ethereum.svg" alt="#">0.041 ETH</li>
-        <li><img src="/images/icon-clock.svg" alt="#">3 days left</li>
+        <li><img src="/icon-ethereum.svg" alt="#">0.041 ETH</li>
+        <li><img src="/icon-clock.svg" alt="#">3 days left</li>
       </ul>
     </article>
     
     <article>
-      <img src="/images/image-avatar.png" alt="#">
+      <img src="/image-avatar.png" alt="#">
       <p>Creation of <span>Jules Wyvern</span></p> 
     </article>
 
